--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.12",
+    "eslint-config-next": "^13.5.3",
     "lucide-react": "^0.263.1",
-    "next": "13.4.12",
+    "next": "^13.5.3",
+    "nextjs": "^0.0.3",
     "postcss": "8.4.27",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.1.1",
