--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "^13.5.3",
     "lucide-react": "^0.263.1",
     "next": "^13.5.3",
+    "next-seo": "^6.4.0",
     "nextjs": "^0.0.3",
     "postcss": "8.4.27",
     "react": "^18.2.0",
